syntax = "proto3";

import "message_common.proto";

message PlayerEntity {
  fixed32 size = 1;
}

message AsteroidEntity {
  repeated float vert_coords = 1; // List of vertices as [x1, y1, x2, y2, ...]
}

message BarrierEntity {
  repeated float vert_coords = 1;
}

message CreationEvent {
  MovementUpdate movement = 1;
  // The center of mass is the point around which the entity rotates.  This is different from the
  // entity's origin unless especially adjusted for.
  oneof entity {
    PlayerEntity player = 2;
    AsteroidEntity asteroid = 3;
    BarrierEntity barrier = 4;
  }
}

message StatusUpdate {
  enum SimpleEvent {
    DELETION = 0;
  }

  oneof payload {
    CreationEvent creation_event = 1;
    SimpleEvent other = 2;
  }
}

message Snapshot {
  message SnapshotItem {
    Uuid id = 1;
    CreationEvent item = 2;
  }

  repeated SnapshotItem items = 1;
}

// Contains information about the dynamic physics properties of some entity in space.
// Contains both its position and velocity, both linear and angular
message MovementUpdate {
  float pos_x = 1;
  float pos_y = 2;
  float rotation = 3;
  float velocity_x = 4; // pixels/tick (60 ticks/second)
  float velocity_y = 5; // pixels/tick (60 ticks/second)
  float angular_velocity = 6;
}

message ServerError {
  string reason = 1;
}

message ServerMessage {
  message Payload {
    Uuid id = 1;
    oneof payload {
      MovementUpdate movement_update = 2;
      StatusUpdate status_update = 3;
      Snapshot snapshot = 4;
      ServerError error = 5;
      Uuid connect_successful = 6;
      MovementDirection player_input = 7;
      bool beam_toggle = 8;
      Point2 beam_aim = 9;
    }
  }

  fixed32 tick = 1;
  // nanotime
  fixed64 timestamp = 2;
  repeated Payload payload = 3;
}
